# Anchor

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  challenge.md  docker-compose.yml  pyproject.toml
deploy/: alibaba-cloud.md  backup_kv_to_oss.py  docker-compose.alibaba.yml  setup_ecs.sh  verify_setup.sh
deploy/qwen_skill/: README.md  anchor-skill.yaml
docs/: DEVPOST.md  architecture.mmd
docs/blog/: 01-why-memoryagent.md  02-fingerprint.md  03-diff-and-weights.md  04-narrator-llm-at-edge.md  05-planner-react-loop.md  06-deploy-alibaba-cloud.md  README.md
examples/: demo_script.md  seed_data.py
splunk/: collections.conf
src/anchor/: __init__.py  _time.py  agent.py  cli.py  config.py  diff.py  embedding.py  fingerprint.py  investigator.py  mcp_server.py  memory.py  models.py  narrator.py  skill_server.py  splunk_client.py
tests/: test_cli.py  test_diff.py  test_embedding.py  test_investigator.py  test_mcp_server.py  test_memory.py  test_misc.py  test_skill_server.py
