[project]
name = "anchor"
version = "0.1.0"
description = "Healthy-baseline drift agent for Splunk — capture a golden fingerprint and compare any window against it."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Anchor contributors" }]
dependencies = [
    "splunk-sdk>=2.0.2",
    "click>=8.1.7",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "openai>=1.30.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4.0"]

[project.scripts]
anchor = "anchor.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anchor"]

[tool.ruff]
line-length = 100
target-version = "py311"
