[project]
name = "anchor"
version = "0.1.0"
description = "Healthy-baseline drift agent for Splunk — capture a golden fingerprint and compare any window against it."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Anchor contributors" }]
dependencies = [
    "splunk-sdk>=2.0.2",
    "click>=8.1.7",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "openai>=1.30.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4.0"]
# Alibaba Cloud integrations (OSS backup for KV memory).
# Install with: pip install -e '.[alibaba]'
alibaba = ["oss2>=2.18.0"]
# Expose Anchor as an MCP server (stdio). Install with: pip install -e '.[mcp]'
mcp = ["mcp>=1.2.0"]
# HTTP shim for Qwen Application Center Custom Skill. Install with:
#   pip install -e '.[skill]'
skill = ["fastapi>=0.110.0", "uvicorn[standard]>=0.27.0"]

[project.scripts]
anchor = "anchor.cli:cli"
anchor-mcp = "anchor.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anchor"]

[tool.ruff]
line-length = 100
target-version = "py311"
